--- a/content/blog/one.mdx
+++ b/content/blog/one.mdx
@@ -4,7 +4,7 @@ description: Dynamic boxing returns - Logan Paul vs. Dillon Danis, KSI vs. Tommy
 image: /images/blog/blog-post-1.jpg
 date: "2023-08-09"
 authors:
-  - Castleridge Labs
+  - castleridgelabs
 ---
 
 Marking an eagerly anticipated return to the boxing scene, [Logan Paul](https://www.fite.tv/fighter/logan-paul/11870/) is set to go head-to-head against [Dillon Danis](https://www.espn.com/mma/fighter/_/id/4316376/dillon-danis) as part of the highly anticipated KSI vs. Tommy Fury event, slated for October 14 in Manchester, England.
