edit blog posts

--- a/content/blog/logan-paul-vs-dillon-danis.mdx
+++ b/content/blog/logan-paul-vs-dillon-danis.mdx
@@ -7,31 +7,18 @@ authors:
   - castleridgelabs
 ---
 
-Marking an eagerly anticipated return to the boxing scene, [Logan Paul](https://www.fite.tv/fighter/logan-paul/11870/) 
-is set to go head-to-head against [Dillon Danis](https://www.espn.com/mma/fighter/_/id/4316376/dillon-danis) 
-as part of the highly anticipated KSI vs. Tommy Fury event, slated for October 14 in Manchester, England.
-
-The forthcoming bout will see Paul step back into the boxing ring for the first time since 
-his notable exhibition match with Floyd Mayweather in June 2021. 
-Amidst his venture into the world of professional wrestling with WWE and his collaboration with KSI on Prime Energy drinks,
-Paul has managed to find his way back to boxing, where he and KSI, both social media influencers turned pugilists, are poised to share the spotlight in two marquee fights.
+[Logan Paul](https://www.fite.tv/fighter/logan-paul/11870/) is making his boxing comeback by facing 
+[Dillon Danis](https://www.espn.com/mma/fighter/_/id/4316376/dillon-danis) on the KSI vs. Tommy Fury card on Oct. 14 in Manchester. 
+This marks Paul's return to the ring after his exhibition bout with Floyd Mayweather in 2021. 
+Despite his recent focus on WWE and collaborations with KSI, Paul and Danis, both social media influencers turned boxers,
+will headline a marquee event together. Danis, a former grappling champion and Bellator fighter, will make his return to
+combat sports after over four years. The event also includes the KSI vs. Tommy Fury fight and will be broadcast live 
+on DAZN pay-per-view in the US.
 
 Sharing his anticipation for the event on Instagram, Paul stated,
 
 > "October 14 I return to boxing after fighting Floyd Mayweather over two years ago.
 > I doubt this little parasite will show up but if he does I'm going to erase him from existence."
-
-Paul's boxing journey has been a noteworthy crossover from the influencer world, 
-a trajectory that included engaging in a series of matches against KSI before their rivalry evolved into a friendship. 
-Now, Paul will join KSI as a co-headliner on the October card.
-
-On the other side of the ring, Danis, a former grappling champion and Bellator fighter, will be making his long-awaited 
-return to combat sports after a hiatus spanning over four years. Renowned for his association with Conor McGregor, 
-Danis transitioned from a career on the mats to the realm of MMA, securing victories in consecutive fights after signing with Bellator.
-
-Although he has been vocal about his eventual return to fighting, Danis had yet to secure a fight with Bellator since 2019. 
-A prior attempt to line up a boxing match against KSI in January fell through, but this time, Danis is gearing up to clash with Paul 
-in a boxing match as part of the same event, which also features KSI.
 
 Disregarding Paul's WWE endeavors, Danis declared,
 
@@ -41,3 +28,5 @@ Disregarding Paul's WWE endeavors, Danis declared,
 
 The Paul vs. Danis spectacle will share the limelight with the KSI vs. Fury showdown, all set to unfold at the AO Arena in Manchester, 
 with the live broadcast available via DAZN pay-per-view in the United States.
+
+Summarized from [MMA FIGHTING](https://www.mmafighting.com/2023/8/8/23824664/logan-paul-returns-to-boxing-to-face-dillon-danis-as-part-of-ksi-vs-tommy-fury-card-in-october)
