--- a/content/blog/logan-paul-vs-dillon-danis.mdx
+++ b/content/blog/logan-paul-vs-dillon-danis.mdx
@@ -29,4 +29,4 @@ Disregarding Paul's WWE endeavors, Danis declared,
 The Paul vs. Danis spectacle will share the limelight with the KSI vs. Fury showdown, all set to unfold at the AO Arena in Manchester, 
 with the live broadcast available via DAZN pay-per-view in the United States.
 
-Summarized from [MMA FIGHTING](https://www.mmafighting.com/2023/8/8/23824664/logan-paul-returns-to-boxing-to-face-dillon-danis-as-part-of-ksi-vs-tommy-fury-card-in-october)
+Summarized from [MMA FIGHTING](https://www.mmafighting.com/2023/8/8/23824664/logan-paul-returns-to-boxing-to-face-dillon-danis-as-part-of-ksi-vs-tommy-fury-card-in-october).
