--- a/content/blog/class-action-fighters-take-on-ufc.mdx
+++ b/content/blog/class-action-fighters-take-on-ufc.mdx
@@ -7,7 +7,7 @@ authors:
   - castleridgelabs
 ---
 
->"The UFC pays its fighters only 20% of its event revenues, when boxing and other major sports pay well above 50%,"
+>"The UFC pays its fighters only 20% of its event revenues, when boxing and other major sports pay well above 50%"
 >
 > **Eric Cramer**, chairman of Berger Montague
 
@@ -21,7 +21,7 @@ $811 million and $1.6 billion. The court ruling allows the case to move forward,
 challenge the certification order through an appeal. The court has also scheduled a status conference 
 for August 21, with no trial date currently set.
 
->"This is just one step in a long legal process," 
+>"This is just one step in a long legal process" 
 >
 > **Isaacson**, who called the lawsuit "legally and factually meritless."
 
