--- a/content/blog/logan-paul-vs-dillon-danis.mdx
+++ b/content/blog/logan-paul-vs-dillon-danis.mdx
@@ -1,7 +1,7 @@
 ---
 title: Logan Paul makes a boxing comeback, set to battle Dillon Danis on the KSI vs. Tommy Fury event in October
 description: Dynamic boxing returns - Logan Paul vs. Dillon Danis, KSI vs. Tommy Fury. October 14th, Manchester. Live on DAZN.
-image: /images/blog/blog-post-1.jpg
+image: /images/blog/blog-post-1.png
 date: "2023-08-08"
 authors:
   - castleridgelabs
