--- a/content/blog/class-action-fighters-take-on-ufc.mdx
+++ b/content/blog/class-action-fighters-take-on-ufc.mdx
@@ -2,26 +2,26 @@
 title: Landmark Class Action - Fighters Take on UFC in Multi-Billion Dollar Legal Battle
 description: Dive into the legal battle as 1,200 fighters take on the UFC in a groundbreaking class action lawsuit, alleging wage suppression and seeking damages of up to $1.6 billion.
 image: /images/blog/blog-post-3.jpeg
-date: "2023-08-10"
+date: '2023-08-10'
 authors:
   - castleridgelabs
 ---
 
->"The UFC pays its fighters only 20% of its event revenues, when boxing and other major sports pay well above 50%"
+> "The UFC pays its fighters only 20% of its event revenues, when boxing and other major sports pay well above 50%"
 >
 > **Eric Cramer**, chairman of Berger Montague
 
-A U.S. judge in Nevada has granted class-action status to a group of over 1,200 martial arts 
-fighters who are suing the Ultimate Fighting Championship (UFC) for alleged wage suppression. The fighters 
-claim that UFC's parent company, Zuffa, utilized its market dominance to hinder competitors 
-and enforced exclusive contracts to retain fighters within the organization. The lawsuit asserts 
+A U.S. judge in Nevada has granted class-action status to a group of over 1,200 martial arts
+fighters who are suing the Ultimate Fighting Championship (UFC) for alleged wage suppression. The fighters
+claim that UFC's parent company, Zuffa, utilized its market dominance to hinder competitors
+and enforced exclusive contracts to retain fighters within the organization. The lawsuit asserts
 that the UFC paid fighters only 20% of its event revenues, significantly lower than the compensation
-provided in other major sports like boxing. The damages sought in the class-action suit range between 
-$811 million and $1.6 billion. The court ruling allows the case to move forward, while the UFC plans to 
-challenge the certification order through an appeal. The court has also scheduled a status conference 
+provided in other major sports like boxing. The damages sought in the class-action suit range between
+$811 million and $1.6 billion. The court ruling allows the case to move forward, while the UFC plans to
+challenge the certification order through an appeal. The court has also scheduled a status conference
 for August 21, with no trial date currently set.
 
->"This is just one step in a long legal process" 
+> "This is just one step in a long legal process"
 >
 > **Isaacson**, who called the lawsuit "legally and factually meritless."
 
