--- a/content/blog/logan-paul-vs-dillon-danis.mdx
+++ b/content/blog/logan-paul-vs-dillon-danis.mdx
@@ -2,17 +2,17 @@
 title: Logan Paul makes a boxing comeback, set to battle Dillon Danis on the KSI vs. Tommy Fury event in October
 description: Dynamic boxing returns - Logan Paul vs. Dillon Danis, KSI vs. Tommy Fury. October 14th, Manchester. Live on DAZN.
 image: /images/blog/blog-post-1.png
-date: "2023-08-08"
+date: '2023-08-08'
 authors:
   - castleridgelabs
 ---
 
-[Logan Paul](https://www.fite.tv/fighter/logan-paul/11870/) is making his boxing comeback by facing 
-[Dillon Danis](https://www.espn.com/mma/fighter/_/id/4316376/dillon-danis) on the KSI vs. Tommy Fury card on Oct. 14 in Manchester. 
-This marks Paul's return to the ring after his exhibition bout with Floyd Mayweather in 2021. 
+[Logan Paul](https://www.fite.tv/fighter/logan-paul/11870/) is making his boxing comeback by facing
+[Dillon Danis](https://www.espn.com/mma/fighter/_/id/4316376/dillon-danis) on the KSI vs. Tommy Fury card on Oct. 14 in Manchester.
+This marks Paul's return to the ring after his exhibition bout with Floyd Mayweather in 2021.
 Despite his recent focus on WWE and collaborations with KSI, Paul and Danis, both social media influencers turned boxers,
 will headline a marquee event together. Danis, a former grappling champion and Bellator fighter, will make his return to
-combat sports after over four years. The event also includes the KSI vs. Tommy Fury fight and will be broadcast live 
+combat sports after over four years. The event also includes the KSI vs. Tommy Fury fight and will be broadcast live
 on DAZN pay-per-view in the US.
 
 Sharing his anticipation for the event on Instagram, Paul stated,
@@ -26,7 +26,7 @@ Disregarding Paul's WWE endeavors, Danis declared,
 > he is in a completely different world. It's a world of pain, a world where he doesn't have control and it's my world, not his.
 > On October 14, in Manchester, Logan Paul is getting beat down."
 
-The Paul vs. Danis spectacle will share the limelight with the KSI vs. Fury showdown, all set to unfold at the AO Arena in Manchester, 
+The Paul vs. Danis spectacle will share the limelight with the KSI vs. Fury showdown, all set to unfold at the AO Arena in Manchester,
 with the live broadcast available via DAZN pay-per-view in the United States.
 
 Summarized from [MMA FIGHTING](https://www.mmafighting.com/2023/8/8/23824664/logan-paul-returns-to-boxing-to-face-dillon-danis-as-part-of-ksi-vs-tommy-fury-card-in-october).
